style.css
/* Colors */
html {
    background: #000;
    color: #fff;
}

/* Font */
html {
    font-family: 'Courier New', Courier, monospace;
    font-size: calc(.5em + 1vw);
}

/* Centering */
html {
    display: flex;
    justify-content: center;
    height: 100vh;
}

/* Paragraph wrap */
main {
    width: 60vw;
}

ol li {
    margin-top: .6rem;
}

/* Code styling */
code {
    background: #222;
    color: #0f0;
    padding: .2rem;
    border-radius: 5px;
}

/* Link styling */
a {
    color: #0f0;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

